fixed uneqal white space in bookList box

--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@ input:is(:hover, :focus) {
 #bookList {
   display: grid;
   grid-template-columns:  repeat(auto-fit, minmax(250px, 1fr));
+  place-items: center;
   gap: 2rem;
 }
 
